Ajout projets Python Tic-Tac-Toe et carte jeu turtle

--- a/index.html
+++ b/index.html
@@ -55,8 +55,25 @@
                 </a>
                 </div>
 
-                </section>
+                <!-- Lien vers le troisième projet : Tic Tac Toe (Python) -->
 
+                <div class="diapos">
+                <a href="#projet3" class="wiggle"> 
+                    <img src="./images/tic-tac-toe.png" alt="Photo du Tic Tac Toe dans le terminal">
+                </a>
+                </div>
+
+                <!-- Lien vers le quatrième projet : Lancelot au Château du Python des Neiges (Python) -->
+
+                <div class="diapos">
+                <a href="#projet4" class="wiggle"> 
+                    <img src="./images/Jeu-Lancelot-Chateau-Python-des-Neiges.png" alt="Carte du jeu : Lancelot au Château du Python des Neiges">
+                </a>
+                </div>
+
+                </section>
+                
+ 
             </section>
 
             <!-- Détail de chaque projet réalisé -->
@@ -103,6 +120,47 @@
 
                     <a href="https://github.com/lorenzo-ottaviani/-Star-Trek-Virtual-Machine/blob/main/Pr%C3%A9sentation%20%E2%80%93%20Config%20et%20virtualisation.pdf"> 
                         Voir le projet </a>
+
+                </article>
+
+                <!-- Troisième projet : Tic Tac Toe (Python) -->
+
+                <article id="projet3">
+
+                    <h2> Tic Tac Toe </h2>
+
+                    <p>
+                        Avec mon équipe j'ai réalisé un jeu de morpion (Tic Tac Toe).
+                        Le jeu s'affiche dans le terminal de l'ordinateur.
+                        Il peut être joué à deux joueurs ou en version solo contre une IA de ma conception.
+                    </p>
+
+                    <p>
+                        Langage utilisé :Python.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/tic-tac-toe"> 
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Quatrième projet : Lancelot au Château du Python des Neiges (Python) -->
+
+                <article id="projet4">
+
+                    <h2> Lancelot au Château du Python des Neiges </h2>
+
+                    <p>
+                        En utilsant le module Turtle (qui permet de dessiner des formes géométriques) j'ai dessiné la carte du jeu "Lancelot au Château du Python des Neiges".
+                        Le visuel correspond à celui du jeu rétro en 2D.
+                    </p>
+
+                    <p>
+                        Langage utilisé :Python.
+                    </p>
+
+                    <!-- <a href="https://github.com/lorenzo-ottaviani/tic-tac-toe"> 
+                        Voir le projet </a> -->
 
                 </article>
 
