ajout lien vers github pour le jeu turtle

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                         Langage utilisé :Python.
                     </p>
 
-                    <!-- <a href="https://github.com/lorenzo-ottaviani/tic-tac-toe"> 
-                        Voir le projet </a> -->
+                    <a href="https://github.com/lorenzo-ottaviani/labyrinthe-python-neiges"> 
+                        Voir le projet </a>
 
                 </article>
 
