style: correction de l'orthographe du site

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
                     <p>
                         On a réalisé en groupe de 3 un site web de fans : le Fansite NBO.
-                        Dans un premier temps on a crée une page d'accueil commune ensemble. 
-                        Puis, chaque membre du groupe à choisi un artiste et a crée seul sa fanpage.
+                        Dans un premier temps, on a créé une page d'accueil commune ensemble.
+                        Puis, chaque membre du groupe a choisi un artiste et a créé seul sa fanpage.
                     </p>
 
                     <p>
@@ -108,7 +108,7 @@
 
                     <p>
                         Avec mes 2 collaborateurs, j'ai répondu à une commande de Starfleet et j'ai conçu 4 configurations PC 
-                        en fonction des attentes et du budjet à disposition de chaque membre de la flotte.
+                        en fonction des attentes et du budget à disposition de chaque membre de la flotte.
                         Sur une machine virtuelle, j'ai ensuite installé les OS Windows 11 et Debian (Linux) en dual boot.
                         J'ai exploré les commandes de base Windows et Linux à partir des terminaux de chacun de ses deux OS.
                         Enfin, j'ai fait communiquer chacun de mes deux OS et leur hôte, via des ping.
@@ -130,13 +130,13 @@
                     <h2> Tic Tac Toe </h2>
 
                     <p>
-                        Avec mon équipe j'ai réalisé un jeu de morpion (Tic Tac Toe).
+                        Avec mon équipe, j'ai réalisé un jeu de morpion (Tic Tac Toe).
                         Le jeu s'affiche dans le terminal de l'ordinateur.
                         Il peut être joué à deux joueurs ou en version solo contre une IA de ma conception.
                     </p>
 
                     <p>
-                        Langage utilisé :Python.
+                        Langage utilisé : Python.
                     </p>
 
                     <a href="https://github.com/lorenzo-ottaviani/tic-tac-toe"> 
@@ -151,12 +151,13 @@
                     <h2> Lancelot au Château du Python des Neiges </h2>
 
                     <p>
-                        En utilsant le module Turtle (qui permet de dessiner des formes géométriques) j'ai dessiné la carte du jeu "Lancelot au Château du Python des Neiges".
+                        En utilisant le module Turtle (qui permet de dessiner des formes géométriques)
+                        j'ai dessiné la carte du jeu "Lancelot au Château du Python des Neiges".
                         Le visuel correspond à celui du jeu rétro en 2D.
                     </p>
 
                     <p>
-                        Langage utilisé :Python.
+                        Langage utilisé : Python.
                     </p>
 
                     <a href="https://github.com/lorenzo-ottaviani/labyrinthe-python-neiges"> 
@@ -173,10 +174,10 @@
                 <h2> Parcours </h2>
 
                 <P>
-                    J'ai étudié les sciences naturelles pendant de nombreuses années jusqu'à obtenir le grade de Master recherche en Ecologie, Biodiversité, Evolution (EBE). 
-                    Après avoir coaché de nombreux collégiens et lycéens en les ayant aidés à reussir leur épreuves de maths, physique-chimie ou SVT ;
+                    J'ai étudié les sciences naturelles pendant de nombreuses années jusqu'à obtenir le grade de Master recherche en Écologie, Biodiversité, Évolution (EBE).
+                    Après avoir coaché de nombreux collégiens et lycéens en les ayant aidés à réussir leurs épreuves de maths, physique-chimie ou SVT ;
                     j'ai exploré l'enseignement en collège et lycée professionnel deux ans et demi durant.
-                    La découverte de Python au printemps 2024, m'a poussé à m'inscire au Bachelor en informatique à l'école La Plateforme, à Marseille.
+                    La découverte de Python au printemps 2024, m'a poussé à m'inscrire au Bachelor en informatique à l'école La Plateforme, à Marseille.
                     Je recherche une alternance en tant que développeur logiciel pour la rentrée 2025.
                 </P>
 
@@ -222,7 +223,7 @@
                             <li> Statistiques </li>
                             <li> Botanique et Écologie végétale </li>
                             <li> Travail de terrain </li>
-                            <li> Conaissances naturalistes </li>
+                            <li> Connaissances naturalistes </li>
                         </ul>
                         
                     </section>
@@ -237,10 +238,10 @@
                             <li> Donner des cours </li>
                             <li> Gestion du temps </li>
                             <li> Pédagogie et didactique </li>
-                            <li> Réalation enseignants, élèves et parents </li>
-                            <li> Hétérogénité des élèves </li>
+                            <li> Relation entre enseignants, élèves et parents </li>
+                            <li> Hétérogénéité des élèves </li>
                             <li> Lycée : Mathématiques, Physique et Chimie </li>
-                            <li> Lycée professionnel : Biotechnolgies</li>
+                            <li> Lycée professionnel : Biotechnologies</li>
                             <li> Classes prépas : SVT </li>
                         </ul>
                         
