feat: ajout de la description des projets 5 à 10

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
             <h1> Lorenzo Ottaviani </h1>
 
-            <!-- Présentation générale des projets réalisés sous forme de panneau qui défile -->
+            <!-- Présentation générale des projets réalisés sous forme de grille -->
 
             <section id="section1">
-
+ 
                 <h2 class="projets_titre"> Projets </h2>
 
                 <section class="projets_diaporama">
@@ -93,7 +93,7 @@
                     </p>
 
                     <p>
-                        Languages utilisés : HTML & CSS.
+                        Langages utilisés : HTML & CSS.
                     </p>
 
                     <a href="https://elaf-alnossirat.github.io/fansite-NBO/"> Voir le projet </a>
@@ -161,6 +161,146 @@
                     </p>
 
                     <a href="https://github.com/lorenzo-ottaviani/labyrinthe-python-neiges"> 
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Cinquième projet : Grandma's Clock (Python) -->
+
+                <article id="projet5">
+
+                    <h2> Grandma's Clock </h2>
+
+                    <p>
+                        Nous avons créé une horloge qui s'affiche dans le terminal de l'ordinateur.
+                        Au lancement du programme, un menu permet à l'utilisateur de choisir s'il veut afficher l'heure
+                        locale ou régler l'horloge sur l'heure de son choix. Il peut aussi programmer une alarme et choisir
+                        d'afficher l'heure au format 12 h ou 24 h. L'horloge peut aussi être mise en pause en appuyant sur une touche.
+                        Ce projet m'a permis de me familiariser avec les modules time, datetime et keyboard de Python.
+                    </p>
+
+                    <p>
+                        Langage utilisé : Python.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/clock">
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Sixième projet : My Calculator (Python) -->
+
+                <article id="projet6">
+
+                    <h2> My Calculator </h2>
+
+                    <p>
+                        Avec le projet My Calculator, on a créé une simple calculette qui s'affiche dans votre terminal.
+                        Elle vous permet de réaliser les sept opérations basiques codées par le langage Python :
+                        l'addition, la soustraction, la multiplication, les divisions simple et euclidienne (avec reste),
+                        le calcul de puissances et le modulo d'un nombre (le reste de la division euclidienne).
+                        Un menu, lancé dès l'ouverture du programme, permet de choisir si l'on souhaite effectuer une opération avec deux nouveaux nombres,
+                        utiliser le résultat précédent dans notre calcul ou tout simplement afficher l'historique de nos opérations
+                        qui a été sauvegardé dans un fichier JSON par notre programme.
+                    </p>
+
+                    <p>
+                        Langage utilisé : Python.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/my-calculator">
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Septième projet : Pendu (Python) -->
+
+                <article id="projet7">
+
+                    <h2> Pendu </h2>
+
+                    <p>
+                        Le projet Pendu vous permet de jouer au célèbre jeu du pendu en utilisant notre banque personnelle de mots.
+                        Attention, la plupart de nos mots sont très difficiles à deviner !
+                        Vous pouvez aussi ajouter vos propres mots au jeu pour personnaliser votre partie et choisir parmi trois niveaux de difficulté
+                        pour rendre le jeu encore plus dur. À vous de jouer !
+                        Ce jeu a été créé en utilisant le module PyGame de Python.
+                    </p>
+
+                    <p>
+                        Langage utilisé : Python.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/pendu">
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Huitième projet : Fruit Ninja Slicer (Python) -->
+
+                <article id="projet8">
+
+                    <h2> Fruit Ninja Slicer </h2>
+
+                    <p>
+                        Dans Fruit Ninja Slicer, vous devrez couper le plus rapidement possible les fruits qui apparaissent à l'écran !
+                        Mais prenez garde, ne coupez pas les bombes, sinon c'est game over direct ! Au contraire, les glaçons
+                        peuvent vous faire gagner un temps précieux en gelant l'écran quelques secondes.
+                        Ce jeu a été créé en utilisant le module PyGame de Python, il se joue sans souris, directement avec les touches du clavier.
+                        Il propose trois niveaux de difficulté différents et est jouable soit en français, soit en anglais.
+                    </p>
+
+                    <p>
+                        Langage utilisé : Python.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/typing-game">
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Neuvième projet : Pokemon (Python) -->
+
+                <article id="projet9">
+
+                    <h2> Pokemon </h2>
+
+                    <p>
+                        On a utilisé le module PyGame de Python pour créer un mini-jeu Pokemon. Choisissez votre héros préféré
+                        parmi les quatre pokémons de départ (Bulbizarre, Salamèche, Carapuche et Pikachu) et affrontez des
+                        pokemons sauvages dans des batailles épiques ! Chaque adversaire battu intégrera votre équipe,
+                        mais prenez garde si un de vos pokemons meurt sur le champ de bataille, il quittera votre pokedex.
+                    </p>
+
+                    <p>
+                        Langage utilisé : Python.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/pokemon">
+                        Voir le projet </a>
+
+                </article>
+
+                <!-- Dixième projet : Budget Buddy (Python + SQL) -->
+
+                <article id="projet10">
+
+                    <h2> Budget Buddy </h2>
+
+                    <p>
+                        Budget Buddy est une application de gestion financière conçue avec le module customtkinter de Python
+                        reliée à une base de données MySQL. À son lancement, l'application vérifie si la base de données existe déjà
+                        sur votre ordinateur, sinon elle va la créer automatiquement de zéro. Pour utiliser notre application,
+                        vous devrez créer un compte client. Lors de l'enregistrement de vos données personnelles dans notre base,
+                        votre mot de passe et votre email seront cryptés pour plus de sécurité. Une fois connecté, Budget Buddy,
+                        vous permettra de gérer facilement vos comptes, relire l'historique de vos transactions et en effectuer de nouvelles.
+                    </p>
+
+                    <p>
+                        Langages utilisés : Python & SQL.
+                    </p>
+
+                    <a href="https://github.com/lorenzo-ottaviani/budget-buddy">
                         Voir le projet </a>
 
                 </article>
