feat: ajout des liens buts vers les projets 5 à 10

--- a/index.html
+++ b/index.html
@@ -39,37 +39,85 @@
 
                 <section class="projets_diaporama">
 
-                <!-- Lien vers le premier projet : Fansite (HTML + CSS) -->
+                    <!-- Lien vers le premier projet : Fansite (HTML + CSS) -->
 
-                <div class="diapos">
-                <a href="#projet1" class="wiggle"> 
-                    <img src="./images/lene-marlin_cover.png" alt="Photo de Lene Marlin">
-                </a>
-                </div>
+                    <div class="diapos">
+                    <a href="#projet1" class="wiggle">
+                        <img src="./images/lene-marlin_cover.png" alt="Photo de Lene Marlin">
+                    </a>
+                    </div>
 
-                <!-- Lien vers le second projet : Configuration PC et virtualisation -->
+                    <!-- Lien vers le second projet : Configuration PC et virtualisation -->
 
-                <div class="diapos">
-                <a href="#projet2" class="wiggle"> 
-                    <img src="./images/star-trek-tng-enterprise.jpg" alt="Photo du vaisseau spatial Entreprise">
-                </a>
-                </div>
+                    <div class="diapos">
+                    <a href="#projet2" class="wiggle">
+                        <img src="./images/star-trek-tng-enterprise.jpg" alt="Photo du vaisseau spatial Entreprise">
+                    </a>
+                    </div>
 
-                <!-- Lien vers le troisième projet : Tic Tac Toe (Python) -->
+                    <!-- Lien vers le troisième projet : Tic Tac Toe (Python) -->
 
-                <div class="diapos">
-                <a href="#projet3" class="wiggle"> 
-                    <img src="./images/tic-tac-toe.png" alt="Photo du Tic Tac Toe dans le terminal">
-                </a>
-                </div>
+                    <div class="diapos">
+                    <a href="#projet3" class="wiggle">
+                        <img src="./images/tic-tac-toe.png" alt="Photo du Tic Tac Toe dans le terminal">
+                    </a>
+                    </div>
 
-                <!-- Lien vers le quatrième projet : Lancelot au Château du Python des Neiges (Python) -->
+                    <!-- Lien vers le quatrième projet : Lancelot au Château du Python des Neiges (Python) -->
 
-                <div class="diapos">
-                <a href="#projet4" class="wiggle"> 
-                    <img src="./images/Jeu-Lancelot-Chateau-Python-des-Neiges.png" alt="Carte du jeu : Lancelot au Château du Python des Neiges">
-                </a>
-                </div>
+                    <div class="diapos">
+                    <a href="#projet4" class="wiggle">
+                        <img src="./images/Jeu-Lancelot-Chateau-Python-des-Neiges.png" alt="Carte du jeu : Lancelot au Château du Python des Neiges">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le cinquième projet : Grandma's Clock (Python) -->
+
+                    <div class="diapos">
+                    <a href="#projet5" class="wiggle">
+                        <img src="./images/" alt="">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le sixième projet : My Calculator (Python) -->
+
+                    <div class="diapos">
+                    <a href="#projet6" class="wiggle">
+                        <img src="./images/" alt="">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le septième projet : Pendu (Python) -->
+
+                    <div class="diapos">
+                    <a href="#projet7" class="wiggle">
+                        <img src="./images/" alt="">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le huitième projet : Fruit Ninja Slicer (Python) -->
+
+                    <div class="diapos">
+                    <a href="#projet8" class="wiggle">
+                        <img src="./images/" alt="">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le neuvième projet : Pokemon (Python) -->
+
+                    <div class="diapos">
+                    <a href="#projet9" class="wiggle">
+                        <img src="./images/" alt="">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le dixième projet : Budget Buddy (Python + SQL) -->
+
+                    <div class="diapos">
+                    <a href="#projet10" class="wiggle">
+                        <img src="./images/" alt="">
+                    </a>
+                    </div>
 
                 </section>
                 
