feat: création de la grille des projets et responsive tablettes

--- a/index.html
+++ b/index.html
@@ -41,81 +41,97 @@
 
                     <!-- Lien vers le premier projet : Fansite (HTML + CSS) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case1">
                     <a href="#projet1" class="wiggle">
-                        <img src="./images/lene-marlin_cover.png" alt="Photo de Lene Marlin">
+                        <img src="./images/projets/lene-marlin_cover.png" alt="Photo de Lene Marlin">
                     </a>
                     </div>
 
                     <!-- Lien vers le second projet : Configuration PC et virtualisation -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case2">
                     <a href="#projet2" class="wiggle">
-                        <img src="./images/star-trek-tng-enterprise.jpg" alt="Photo du vaisseau spatial Entreprise">
+                        <img src="./images/projets/star-trek-tng-enterprise.jpg" alt="Photo du vaisseau spatial Entreprise">
                     </a>
                     </div>
 
                     <!-- Lien vers le troisième projet : Tic Tac Toe (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case3">
                     <a href="#projet3" class="wiggle">
-                        <img src="./images/tic-tac-toe.png" alt="Photo du Tic Tac Toe dans le terminal">
+                        <img src="./images/projets/tic-tac-toe.png" alt="Photo du Tic Tac Toe dans le terminal">
                     </a>
                     </div>
 
                     <!-- Lien vers le quatrième projet : Lancelot au Château du Python des Neiges (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case4">
                     <a href="#projet4" class="wiggle">
-                        <img src="./images/Jeu-Lancelot-Chateau-Python-des-Neiges.png" alt="Carte du jeu : Lancelot au Château du Python des Neiges">
+                        <img src="./images/projets/Jeu-Lancelot-Chateau-Python-des-Neiges.png" alt="Carte du jeu : Lancelot au Château du Python des Neiges">
                     </a>
                     </div>
 
                     <!-- Lien vers le cinquième projet : Grandma's Clock (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case5">
                     <a href="#projet5" class="wiggle">
-                        <img src="./images/" alt="">
+                        <img src="./images/projets/clock_owl.jpg" alt="Image d'horloge en forme d'hibou">
                     </a>
                     </div>
 
                     <!-- Lien vers le sixième projet : My Calculator (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case6">
                     <a href="#projet6" class="wiggle">
-                        <img src="./images/" alt="">
+                        <img src="./images/projets/old_calculator.webp" alt="Image d'une vieille calculette">
                     </a>
                     </div>
 
                     <!-- Lien vers le septième projet : Pendu (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case7">
                     <a href="#projet7" class="wiggle">
-                        <img src="./images/" alt="">
+                        <img src="./images/projets/pendu.png" alt="Capture d'écran du jeu Pendu">
                     </a>
                     </div>
 
                     <!-- Lien vers le huitième projet : Fruit Ninja Slicer (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case8">
                     <a href="#projet8" class="wiggle">
-                        <img src="./images/" alt="">
+                        <img src="./images/projets/fruit_ninja_slicer.png" alt="Capture d'écran du jeu Fruit Ninja Slicer">
                     </a>
                     </div>
 
                     <!-- Lien vers le neuvième projet : Pokemon (Python) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case9">
                     <a href="#projet9" class="wiggle">
-                        <img src="./images/" alt="">
+                        <img src="./images/projets/pokemon_family.png" alt="Image de nos Pokemons">
                     </a>
                     </div>
 
                     <!-- Lien vers le dixième projet : Budget Buddy (Python + SQL) -->
 
-                    <div class="diapos">
+                    <div class="diapos" id="case10">
                     <a href="#projet10" class="wiggle">
-                        <img src="./images/" alt="">
+                        <img src="./images/projets/budget_buddy.png" alt="Capture d'écran de l'app Budget Buddy">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le onzième projet : Minesweeper (Python) -->
+
+                    <div class="diapos" id="case11">
+                    <a href="#projet11" class="wiggle">
+                        <img src="./images/projets/" alt="">
+                    </a>
+                    </div>
+
+                    <!-- Lien vers le douzième projet : My Discord (C + SQL) -->
+
+                    <div class="diapos" id="case12">
+                    <a href="#projet12" class="wiggle">
+                        <img src="./images/projets/" alt="">
                     </a>
                     </div>
 
